force-app/main/default/objects/Expense__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Signed / E-signed</fullName>
            </value>
            <value>
                <fullName>Wet Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>