force-app/main/default/objects/Expense__c/fields/Expense_Head__c.field-meta.xml
<CustomField>
    <fullName>Expense_Head__c</fullName>
    <label>Expense Head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>