force-app/main/default/objects/Expense__c/fields/ExpenseDescription__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDescription__c</fullName>
    <label>Expense Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>