force-app/main/default/objects/Expense__c/fields/ExpensesAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpensesAmount__c</fullName>
    <label>Expenses Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>