force-app/main/default/objects/Expense__c/fields/ForexRate__c.field-meta.xml
<CustomField>
    <fullName>ForexRate__c</fullName>
    <label>Forex Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>