force-app/main/default/objects/Expense__c/fields/SupportingAttached__c.field-meta.xml
<CustomField>
    <fullName>SupportingAttached__c</fullName>
    <label>Supporting Attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>